--- a/recouvr_index.html
+++ b/recouvr_index.html
@@ -15,41 +15,23 @@
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.min.js"></script>
   
-  <title>Nouveau Rappel - Gestionnaire des Rappels de Relance de Paiement</title>
+  <title>Accueil - Gestionnaire des Rappels de Relance de Paiement</title>
 </head>
 <body>
-
+	
     <h3 class="text-center">Gestionnaire des Rappels de Relance de Paiement</h3><br />
 
 <div class="container rounded">
-    <!-- <form class="form-horizontal" method="post"> -->
-	<h4><i class="fa fa-bell" aria-hidden="true"></i> Nouveau Rappel</h4><br />
-	<form>
-	 
-	<div class="form-group">
-		<label for="formGroupExampleInput" class="col-form-label" style="font-weight:bold">Titre:</label>
-		<input class="form-control" type="text" id="formGroupExampleInput" placeholder="Ajouter un titre" maxlength="70">
-	</div>
-	
-	<div class="form-group ">
-       <label for="example-date-input" class="col-form-label" style="font-weight:bold">Date:</label>
-	   <div class="input-group">
-        <div class="input-group-addon">
-         <i class="fa fa-calendar"></i>
-        </div>
-        <input class="form-control" id="date" name="date" placeholder="Sélectionner une date" type="text"/>
-       </div>
-	</div>
-	
-	<div class="form-group">
-		<label for="exampleFormControlTextarea1" style="font-weight:bold">Description:</label>
-		<textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Ajouter une description" maxlength="300"></textarea>
-	</div>
-	
-	<button class="btn btn-primary" type="submit">Ajouter</button>
-	 
-    </form>
-	
+
+	<h4><i class="fa fa-home" aria-hidden="true"></i> Accueil</h4><br />
+
+<!-- <div class="row no-gutters justify-content-around"> -->
+<div class="row no-gutters justify-content-around">
+  <button type="button" class="btn btn-primary btn-lg col-sm-4 mb-2">Ajouter un rappel</button>
+  <button type="button" class="btn btn-secondary btn-lg col-sm-4 mb-2">Lister les rappels</button>
+
+</div>
+
 </div>	
 
 <script>
