--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
+    <meta name="description" content="Backend code of Calendar Frontend">
+    <meta name="author" content="Amine Al Kaderi">
+    <link rel="copyright" href="https://github.com/amindeed/Gmail-AutoResponder#license">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <base target="_top">
